kubernetes/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: freeipa-ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.lab.internal
      secretName: grafana-tls
  rules:
    - host: grafana.lab.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
